fixed alignment profile panel

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -29,11 +29,10 @@ p {
 }
 
 .media-object {
-height: 18em;
-width: 18em;
+height: 19em;
+width: 19em;
 margin-bottom: 1.5em;
-align-items: center;
-/*margin-left: 4em;*/
+margin-left: 3.5em;
 border-radius: 50%;
 }
 
@@ -87,17 +86,17 @@ h1  {
   padding-right: 10px;
   margin-left: 2em;
   margin-right: 2em;
-
+  font-size: 18px;
 }
 
 .media-headings {
   margin-top: 0;
-  margin-left: 40px;
+  /*margin-left: 40px;*/
   align-items: center;
 }
 
 .media-list {
-  margin-left: 40px;
+  /*margin-left: 40px;*/
   font-family: 'Maven Pro', sans-serif;
   color: rgb(11, 9, 13);
 }
@@ -159,10 +158,18 @@ li {
 
 }
 
-.profile-panel {
+/*.profile-panel {
   border-right: 1px solid black;
-}
+}*/
 
 .media-left {
   align-items: center;
+}
+
+#panel-username {
+  font-size: 36px;
+  text-align: center;
+  padding-left: 1em;
+  margin-left: auto;
+  margin-right: auto;
 }
